--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -16,7 +16,7 @@
 <body>
 
     <header>
-        <nav class="pink darken-1">
+        <nav class="light-blue darken-1">
             <div class="nav-wrapper">
                 <a href="{{ url_for('home') }}" class="brand-logo">Task Manager</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars">menu</i></a>
@@ -41,7 +41,7 @@
 
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer blue darken-3">
         <div class="footer-copyright">
             <div class="container">
                 For educational purposes only
