--- a/taskmanager/templates/add_category.html
+++ b/taskmanager/templates/add_category.html
@@ -12,7 +12,7 @@
                 <label for="category_name">Category Name</label>
             </div>
         </div>
-        <!-- submit name -->
+        <!-- Submit name -->
         <div class="row">
             <div class="col s12 center-align">
                 <button type="submit" class="btn-large light-blue darken-1">
