--- a/taskmanager/templates/add_category.html
+++ b/taskmanager/templates/add_category.html
@@ -4,7 +4,7 @@
 
 <div class="row">
     <form class="col s12" method="POST" action="{{ url_for('add_category') }}">
-        <!-- category name -->
+        <!-- Category name -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
