Test commit from gitpod

--- a/taskmanager/templates/add_task.html
+++ b/taskmanager/templates/add_task.html
@@ -4,7 +4,7 @@
 
 <div class="row">
     <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
-        <!-- task name -->
+        <!-- Task name -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
@@ -13,7 +13,7 @@
                 <label for="task_name">Task Name</label>
             </div>
         </div>
-        <!-- task description -->
+        <!-- Task description -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
